Enhanced website layout & functionality: general css formatting, added settings & status query; Server side status querying method